# hacknc2022

./: .gitignore  .gitmodules  .prettierrc.js  LICENSE  README.md  go.work  go.work.sum  package.json  turbo.json  versions.json
apps/importer/: package.json
apps/importer/assets/: duke.json
apps/importer/src/: duke.ts  index.ts  meili.ts  types.ts
apps/lookup/: Cargo.toml  Dockerfile  package.json
apps/lookup/src/: lib.rs  main.rs
apps/rmp/: Dockerfile  go.mod  go.sum  main.go  package.json  prof.graphql
apps/rmp/server/: database.go  server.go
apps/rmp/types/: types.go
apps/scraper/: index.js  package.json  pageController.js  pageScraper.js  scraperController.js
apps/scrapy/: go.mod  main.go  package.json  scrapy.py
apps/scrapy/db/: db.go
apps/scrapy/parse/: parse.go
apps/scrapy/src/: index.ts  meili.ts
apps/web/: .dockerignore  Dockerfile  next.config.js  package.json  postcss.config.js  tailwind.config.js
apps/web/components/general/: college-select.tsx  link.tsx  logo.tsx  subject-select.tsx  term-select.tsx
apps/web/components/hooks/: useSwitch.tsx  useWindowSize.tsx
apps/web/components/layouts/: default-layout.tsx  navbar.tsx
apps/web/components/meta/: meta.tsx
apps/web/components/modals/: general-modal.tsx
apps/web/pages/: _app.tsx  _document.tsx  compare.tsx  index.tsx  login.tsx  profile.tsx
apps/web/pages/api/: colleges.ts  comment.ts  ping.ts  term.ts
apps/web/pages/class/: [id].tsx
apps/web/pages/research/: [subject].tsx  index.tsx
apps/web/scripts/: meili.ts  storage.ts
apps/web/styles/: globals.css
(+1 files in other folders)
